cleanup, method references istf lambda + simplify stream chains (#5891)